rendered a JSP with book information

--- a/spring-data-jpa/src/main/resources/application.properties
+++ b/spring-data-jpa/src/main/resources/application.properties
@@ -4,3 +4,6 @@ createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.view.prefix=/WEB-INF/
+logging.level.web=DEBUG
