--- a/burger-tracker/src/main/resources/application.properties
+++ b/burger-tracker/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database setting
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/burger-tracker-schema
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=admin
+spring.datasource.password=Administr@t0r
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JSP pages setting
@@ -10,3 +10,7 @@ spring.mvc.view.prefix=/WEB-INF/
 
 # looging setting
 logging.level.web=DEBUG
+
+
+# to enable browser to handle PUT/DELETE requests from a form
+spring.mvc.hiddenmethod.filter.enabled=true
