--- a/save-travels/src/main/resources/application.properties
+++ b/save-travels/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database setting
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/save-travels-schema
+spring.datasource.url=jdbc:mysql://localhost:3306/travel-schema
 spring.datasource.username=admin
 spring.datasource.password=Administr@t0r
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
