changed the gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,10 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+**/.mvn 
+.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 # Eclipse m2e generated files
 # Eclipse Core
