--- a/book-club/src/main/resources/application.properties
+++ b/book-club/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-
+# Database setting
 spring.datasource.url=jdbc:mysql://localhost:3306/book-club-schema?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=admin
+spring.datasource.password=Administr@t0r
 spring.jpa.hibernate.ddl-auto=update
-
+# JSP pages setting
 spring.mvc.view.prefix=/WEB-INF/
+#logging setting
 logging.level.web=DEBUG
