added the functionality to edit an item

--- a/book-club/src/main/resources/application.properties
+++ b/book-club/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix=/WEB-INF/
 #logging setting
 logging.level.web=DEBUG
+# to allow for PUT method throught a FORM
+spring.mvc.hiddenmethod.filter.enabled=true
